--- a/docs/styles/registration.css
+++ b/docs/styles/registration.css
@@ -1,9 +1,33 @@
 @font-face {
-  font-family: 'Cera pro';
-  src: url('CeraPro-Medium.woff') format(woff);
-  font-weight: normal;
-  font-style: normal;
+  font-family: "Cera Pro";
+  src: url('../fonts/CeraPro-Regular.woff2') format("woff2"),
+   url('../fonts/CeraPro-Regular.woff') format("woff"),
+   url('../fonts/CeraPro-Regular.ttf') format("truetype");
+  font-weight: 400;
 }
+
+@font-face {
+  font-family: "Cera Pro";
+  src: url('../fonts/CeraPro-Medium.eot') format("embedded-opentype"),
+   url('../fonts/CeraPro-Medium.woff') format("woff"),
+   url('../fonts/CeraPro-Medium.ttf') format("truetype");
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: "Cera Pro";
+  src: url('../fonts/CeraPro-Bold.eot') format("woff2"),
+   url('../fonts/CeraPro-Bold.woff') format("woff"),
+   url('../fonts/CeraPro-Bold.ttf') format("truetype");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "Cera Pro";
+  src: url('../fonts/CeraPro-Black.eot') format("embedded-opentype"),
+       url('../fonts/CeraPro-Black.ttf') format("truetype"),
+       url('../fonts/CeraPro-Black.woff') format("woff");
+  font-weight: 900;
 
 body {
   display: flex;
