--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -84,6 +84,7 @@ nav {
   padding: 8px 25px 25px;
   display: flex;
   border-bottom: 3px solid #46A358;
+  font-weight: 700;
 }
 
 .list-item:hover {
@@ -92,15 +93,14 @@ nav {
 
 .welcome-text {
   display: flex;
-  justify-content: space-between;
   flex-direction: column;
   align-items: flex-start;
-  padding: 80px 160px;
 }
 
 .welcome{
   display: flex;
   flex-direction: row;
+  padding: 80px 160px;
 }
 
 
@@ -148,7 +148,6 @@ nav {
 }
 
 .shop-button {
-  margin-top: 44px;
   border-radius: 6px;
   background: #46A358;
   width: 140px;
@@ -160,11 +159,12 @@ nav {
   font-weight: 700;
   line-height: 20px; /* 125% */
   text-transform: uppercase;
+  margin-top: 44px;
 }
 
 .plant-image {
   margin-left: auto;
-  margin-right: 120px;
+  justify-content: flex-end;
 }
 
 .second-header {
