--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -321,4 +321,51 @@ line-height: 65px; /* 100% */
 
 .goods {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 90px;
+  margin-right: 120px;
+}
+
+.good1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.gooditem {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 40px 30px 120px 50px;
+}
+
+.gooditem img {
+  padding-bottom: 40px;
+}
+
+.goodname {
+    color: #3D3D3D;
+  font-family: "Cera Pro";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px; /* 100% */
+}
+
+.goodprice {
+    color: #46A358;
+  font-family: "Cera Pro";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 16px; /* 88.889% */
+}
+.pages-nav 
+{
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 120px;
 }
