--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -452,10 +452,28 @@ margin-top: 18px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding: 40px 0px 0px 0px;
   margin: 0px 30px 120px 50px;
-  padding-top: 40px;
-  border-top:#46A358 solid 1px;
   position: relative;
+  border-top:#46A358 solid transparent 1px;
+}
+
+.good-off {
+  position: absolute;
+  background: #46A358;
+  padding: 7px 8px;
+  color: #FFF;
+  font-family: "Cera Pro";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 16px; /* 100% */
+  left: 0px;
+  top: 14px;
+}
+
+.gooditem:hover{
+  border-top: 1px solid #46A358;
 }
 
 .good-svg-hover {
@@ -532,12 +550,16 @@ margin-top: 18px;
 }
 
 .find-more img {
+  max-width: 116%;
+  max-height: 116%;
+  margin-bottom: 10px;
 }
 
 .find-more-text {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  justify-content: center;
 }
 
 .find-more-header {
@@ -549,6 +571,8 @@ margin-top: 18px;
   font-weight: 900;
   line-height: 24px; /* 133.333% */
   text-transform: uppercase;
+  margin-right: 30px;
+  max-width: 40%;
 }
 
 .find-more-span {
@@ -559,6 +583,8 @@ margin-top: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 24px; /* 171.429% */
+  margin-right: 30px;
+  max-width: 80%;
 }
 
 .find-more-button {
@@ -570,6 +596,8 @@ margin-top: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: 20px; /* 142.857% */
+  padding: 11px 27px 9px 28px;
+  margin: 25px 30px 46px auto;
 }
 
 .blogs {
