--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -248,8 +248,8 @@ nav {
   position: absolute;
   max-width: 135px;
   max-height: 135px;
-  left: 55px;
-  bottom: 40px;
+  left: 50px;
+  bottom: 37px;
 }
 
 .sidebar {
@@ -272,7 +272,6 @@ nav {
   font-style: normal;
   font-weight: 700;
   line-height: 16px; /* 88.889% */
-  width: 150%;
   margin-top: 30px;
   margin-bottom: 7px;
 }
@@ -345,10 +344,17 @@ margin-left: 10px;
 .filter-button {
   border-radius: 6px;
   background: #46A358;
-  width: 90px;
-  height: 35px;
+  padding: 8px 25px;
   margin-top: 15px;
   margin-bottom: 45px;
+  max-width: 90px;
+  max-height: 35px;
+  color: #FFF;
+  font-family: "Cera Pro";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px; /* 125% */
 }
 
 .category-count.active {
