good-off hover position changed to percentage

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -517,8 +517,8 @@ margin-top: 18px;
   font-style: normal;
   font-weight: 500;
   line-height: 16px; /* 100% */
-  left: 0px;
-  top: 14px;
+  left: 0%;
+  top: 3%;
 }
 
 
