--- a/dumper/styles/style.css
+++ b/dumper/styles/style.css
@@ -36,15 +36,6 @@
   font-weight: 400;
 }
 
-@keyframes pulsation {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1.1);
-  }
-}
-
 
 *{
   margin: 0;
@@ -56,21 +47,7 @@
 
 button {
   cursor: pointer;
-  border: 1px solid #00000000;
 }
-
-button:hover {
-  animation: pulsation 1s forwards alternate;
-  border: 1px solid #000000;
-}
-
-.blog-links:hover {
-  animation: pulsation 1s forwards alternate;
-}
-
-.gooditem:hover {
-  animation: pulsation 1s forwards alternate;
-} 
 
 body {
   font-family: 'Encode Sans Expanded', sans-serif;
@@ -215,16 +192,11 @@ nav {
   display: flex;
 }
 
-.dropdown-item.active:hover  .dropdown-second {
+.dropdown-item.active:hover ~ .dropdown-second {
   display: flex;
 }
-
 
 .dropdown-both:hover .dropdown-item:hover .dropdown-item.active {
-  display: flex;
-}
-
-.dropdown-both:hover .dropdown-second {
   display: flex;
 }
 
@@ -249,6 +221,7 @@ nav {
   display: flex;
   flex-direction: row;
   padding: 80px 160px;
+  background: linear-gradient(98deg, rgba(245, 245, 245, 0.50) -23.46%, rgba(245, 245, 245, 0.50) 107.51%);
 }
 
 
@@ -366,24 +339,6 @@ margin-left: 10px;
   flex-direction: row;
   justify-content: space-between;
 }
-
-.category-item.active {
-  .category-item {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-    color: #46A358;
-    font-family: "Cera Pro";
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 40px; /* 266.667% */
-    margin-left: 10px;
-  }
-}
-
-
 .category-count {
   color: #3D3D3D;
   font-family: "Cera Pro";
@@ -496,7 +451,8 @@ margin-top: 18px;
   margin-right: -15px;
 }
 .wrapper {
-  padding-left: 50px;
+  /* padding-right: 120px; */
+  margin-left: 50px;
 }
 
 .shop-header {
@@ -560,7 +516,7 @@ margin-top: 18px;
   flex-direction: column;
   align-items: flex-start;
   padding: 40px 0px 0px 0px;
-  margin: 0px 0px 120px 50px;
+  margin: 0px 30px 120px 50px;
   position: relative;
   border-top:#46A358 solid transparent 1px;
   min-width: 258px;
@@ -786,7 +742,6 @@ margin-top: 18px;
   gap: 4px;
   max-width: 268px;
   justify-content: space-between;
-  border: 1px solid #00000000;
 }
 
 
